fixed issue where window resizing would change content spacing. -added fixed width of 820px -added auto margin to help justify spacing while window was sized up added css to subheading element to fix appeal

--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,7 @@
     font-size: 18px;
     color:#e5e7eb;
     font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
 }
 .head-list{
     display: flex;
@@ -65,13 +66,15 @@
     flex-direction: row;
 }
 .title {
+    margin-top: 100px;
     border:2px solid royalblue;
     margin-left: 20%;
-    margin-right:10%;
-    font-size: 48px;
+    margin-right:15%;
+    font-size: 48pt;
     font-weight:bolder;
     color:#F9FAF8;
     font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1px;
 
 }
 .title-img {
@@ -89,7 +92,7 @@
 .subtext{
     color:#f9faf8d7;
     margin-left: 20%;
-    margin-right: 10%;
+    margin-right: 15%;
     text-align: justify;
 }
 .signup{
@@ -108,4 +111,34 @@ button {
     cursor: pointer;
     border-radius: 12%;
     font-size: 12pt;
+}
+.container {
+    border:2px solid salmon;
+}
+.content-container {
+    border: 2px solid orangered;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width:820px;
+    margin:auto;
+}
+.content {
+    width: 150px;
+    height: 200px;
+    border: 4px solid #0d56cc;
+    border-radius:22%;
+    align-items: center;
+    text-align: center;
+}
+.subheading {
+    text-align: center;
+    border: 2px solid rebeccapurple;
+    font-size: 36pt;
+    font-weight: bolder;
+    margin:20px;
+    color:#1f2937;
+    font-family: Arial, Helvetica, sans-serif;
+    letter-spacing: 1.5px;
+
 }
